--- a/index.html
+++ b/index.html
@@ -6,7 +6,21 @@
     </head>
     <body>
         <header>
-            <div class="container"></div>
+            <div class="container">
+                <img src="img/logo.png" alt="neori-logo">
+            </div>
+
+            <nav class="container" >
+                <ul>
+                    <li><a href="#">FEATURES</a></li>
+                    <li><a href="#">EDITORIALS</a></li>
+                    <li><a href="#">ENVIROMENT</a></li>
+                    <li><a href="#">BLOG</a></li>
+                    <li><a href="#">SHOP</a></li>
+                    <li><a href="#">CONTATCT</a></li>
+                </ul>
+            </nav>
+
         </header>
 
         <main>
