aggiunte tutte le sezioni con immagini scurite e testi

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
 
             <nav class="container" >
                 <ul>
-                    <li><a href="#">FEATURES</a></li>
-                    <li><a href="#">EDITORIALS</a></li>
-                    <li><a href="#">ENVIROMENT</a></li>
-                    <li><a href="#">BLOG</a></li>
-                    <li><a href="#">SHOP</a></li>
-                    <li><a href="#">CONTATCT</a></li>
+                    <li><a href="#" class="grey-text">FEATURES</a></li>
+                    <li><a href="#" class="grey-text">EDITORIALS</a></li>
+                    <li><a href="#" class="grey-text">ENVIROMENT</a></li>
+                    <li><a href="#" class="grey-text">BLOG</a></li>
+                    <li><a href="#" class="grey-text">SHOP</a></li>
+                    <li><a href="#" class="grey-text">CONTATCT</a></li>
                 </ul>
             </nav>
 
@@ -25,15 +25,51 @@
 
         <main>
             <div class="container">
-                <section class="hero-section"></section>
+                <div class="hero-section">
+                    <img src="img/banner.jpg" alt="yoga-girl" id="img">
+
+                    <div class="hero-text font-family">
+                        <h2 class="thin-and-high font-family"> Pretium ac placerat dui interdum nunc in eros urna morbi</h2>
+                        <p class="font-family">Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque ducimus harum dolore reiciendis deserunt aut dolor voluptas...</p>
+                    </div>
+                </div>
              
                 <div class="main-container">
-                    <div class="main-container-header"></div>
+                    <section class="main-container-header">
+                        <h1 class="font-family">Leadership</h1>
+                        <h3 class="font-family grey-text">Fertenum urna a libero tempus</h3>
+                    </section>
 
                     <div class="row clearfix">
-                        <div class="column"></div>
-                        <div class="column center-column"></div>
-                        <div class="column"></div>
+                        <div class="column">
+                            <div class="column-image border-radius">
+                                <img src="img/img-1.jpg" alt="girl-and-plant">
+                            </div>
+                            <h3 class="font-family">Lorem</h3>
+                            <p class="grey-text font-family">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Dignissimos excepturi delectus ullam quaerat laudantium. Odio similique quibusdam, at aut neque sed rerum ipsum dolore ut voluptates harum id eveniet quos!</p>
+
+                        </div>
+                        <div class="column center-column">
+                            <div class="column-image">
+                                <img src="img/banner-2.jpg" alt="boy-and-coffee">
+                            </div>
+
+                            <h3 class="font-family">Ipsum</h3>
+                            <p class="grey-text font-family">Lorem ipsum dolor sit amet consectetur adipisicing elit. Rerum dicta aliquam ratione nisi harum. Ipsam beatae vitae unde magni, dolorum necessitatibus pariatur laboriosam placeat ad, non obcaecati illum maiores excepturi?
+                            Nam ea hic odit, cumque quisquam quis blanditiis ullam incidunt aliquam sint fuga non assumenda deserunt voluptate temporibus quibusdam adipisci natus velit molestiae officia perferendis reiciendis cupiditate quo magnam! Possimus.
+                            Recusandae magni sint laboriosam ipsam quos omnis unde aperiam eos nihil excepturi. Officiis eaque possimus quod, quam excepturi, inventore nam voluptatem sed ut voluptates esse tenetur veritatis magni sunt voluptatibus.
+                            Ea, similique vitae ullam illo labore adipisci in eaque nostrum dolore architecto eum mollitia reprehenderit ducimus? Corporis, dolores fuga recusandae et iure rerum vitae porro earum aspernatur placeat, atque quidem?</p>
+
+                        </div>
+                        <div class="column">
+                            <div class="column-image border-radius">
+                                <img src="img/img-3.jpg" alt="party">
+
+                            </div>
+                            <h3 class="font-family">Lorem</h3>
+                            <p class="grey-text font-family">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eos quo ab eligendi sint illum culpa, natus minima quidem perspiciatis ipsa sequi veniam quam obcaecati fuga porro, optio atque rem rerum.</p>
+
+                        </div>
                     </div>
                 </div> 
 
@@ -41,6 +77,8 @@
         </main>
 
         <footer>
-            <div class="container"></div>
+            <div class="container font-family">
+                Designed with <span class="icon">&#10084;</span>
+            </div>
         </footer>
     </body>
